hedgedoc/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: hedgedoc-secret
          image: quay.io/hedgedoc/hedgedoc:1.9.9
          name: hedgedoc
          volumeMounts:
            - mountPath: /hedgedoc/public/uploads
              name: uploads
          resources:
            limits:
              memory: 256Mi
              cpu: 500m
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: hedgedoc-uploads
