hedgedoc/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
