hedgedoc/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
spec:
  type: ClusterIP
  selector:
    app: hedgedoc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
