hedgedoc/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # https://github.com/hayatroid/manifest/blob/main/cert-manager/base/cluster-issuer.yaml
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: md.hayatro.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hedgedoc
                port:
                  number: 80
  tls:
    - hosts:
        - md.hayatro.id
      secretName: md-hayatro-id-tls
